# iso-20022

./: .gitignore  404.html  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  business_header.html  document.html  message_envelope.html  overview.html  print.html  searchindex.js  searchindex.json  signature.html  validation.html  xml.html
.github/workflows/: user-guide.yml
acmt/: Cargo.toml
acmt/src/: acmt_001_001_08.rs  acmt_002_001_08.rs  acmt_003_001_08.rs  acmt_005_001_06.rs  acmt_006_001_07.rs  acmt_007_001_04.rs  acmt_008_001_04.rs  acmt_009_001_03.rs  acmt_010_001_03.rs  acmt_011_001_03.rs  acmt_012_001_03.rs  acmt_013_001_03.rs  acmt_014_001_04.rs  acmt_015_001_03.rs  acmt_016_001_03.rs  acmt_017_001_03_0.rs  acmt_018_001_03.rs  acmt_019_001_03.rs  acmt_020_001_03.rs  acmt_021_001_03.rs  acmt_022_001_03.rs  acmt_023_001_03.rs  acmt_024_001_03.rs  acmt_027_001_04.rs  acmt_028_001_04.rs  acmt_029_001_04.rs  acmt_030_001_03.rs  acmt_031_001_04.rs  acmt_032_001_04.rs  acmt_033_001_02.rs  acmt_034_001_04.rs  acmt_035_001_02.rs  acmt_036_001_01.rs  acmt_037_001_02.rs  lib.rs
admi/: Cargo.toml
admi/src/: admi_002_001_01.rs  admi_004_001_02.rs  admi_005_001_01.rs  admi_006_001_01.rs  admi_007_001_01.rs  admi_009_001_02.rs  admi_010_001_02.rs  admi_011_001_01.rs  admi_017_001_01.rs  lib.rs
auth/: Cargo.toml
auth/src/: auth_001_001_01.rs  auth_002_001_01.rs  auth_003_001_01.rs  auth_012_001_02.rs  auth_013_001_02.rs  auth_014_001_02.rs  auth_015_001_02.rs  auth_016_001_02.rs  auth_017_001_02.rs  auth_018_001_03.rs  auth_019_001_03.rs  auth_020_001_03.rs  auth_021_001_03.rs  auth_022_001_03.rs  auth_023_001_03.rs  auth_024_001_03.rs  auth_025_001_03.rs  auth_026_001_03.rs  auth_027_001_03.rs  auth_028_001_01.rs  auth_029_001_03.rs  auth_030_001_03.rs  auth_031_001_01.rs  auth_032_001_01.rs  auth_033_001_02.rs  auth_034_001_01.rs  auth_035_001_01.rs  auth_036_001_02.rs  auth_038_001_01.rs  auth_039_001_01.rs  auth_040_001_01.rs  auth_041_001_01.rs  auth_042_001_02.rs  auth_043_001_01.rs  auth_044_001_02.rs  auth_045_001_02.rs  auth_047_001_01.rs  auth_048_001_01.rs  auth_049_001_02.rs  auth_050_001_01.rs  (+43 more)
book/src/: message_envelope.md  validation.md  xml.md
caaa/: Cargo.toml
caaa/src/: caaa_001_001_11.rs  caaa_002_001_11.rs  caaa_003_001_11.rs  caaa_004_001_10.rs  caaa_005_001_11.rs  caaa_006_001_10.rs  caaa_007_001_11.rs  caaa_008_001_10.rs  caaa_009_001_10.rs  caaa_010_001_09.rs  caaa_011_001_11.rs  caaa_012_001_10.rs  caaa_013_001_10.rs  caaa_014_001_09.rs  caaa_015_001_06.rs  caaa_016_001_09.rs  caaa_017_001_09.rs  caaa_018_001_06.rs  caaa_019_001_05.rs  caaa_020_001_03.rs  caaa_021_001_03.rs  caaa_022_001_02.rs  caaa_023_001_02.rs  caaa_024_001_02.rs  caaa_025_001_02.rs  lib.rs
caad/: Cargo.toml
caad/src/: caad_001_001_02.rs  caad_002_001_02.rs  caad_003_001_02.rs  caad_004_001_02.rs  caad_005_001_03.rs  caad_006_001_03.rs  caad_007_001_03.rs  caad_008_001_01.rs  caad_009_001_01.rs  caad_010_001_01.rs  lib.rs
caam/: Cargo.toml
caam/src/: caam_001_001_03.rs  caam_002_001_03.rs  caam_003_001_03.rs  caam_004_001_03.rs  caam_005_001_02.rs  caam_006_001_02.rs  caam_007_001_01.rs  caam_008_001_01.rs  caam_009_001_02.rs  caam_010_001_02.rs  caam_011_001_01.rs  caam_012_001_01.rs  lib.rs
cafc/: Cargo.toml
cafc/src/: cafc_001_001_02.rs  cafc_002_001_02.rs  lib.rs
cafm/: Cargo.toml
cafm/src/: cafm_001_001_02.rs  cafm_002_001_02.rs  lib.rs
cafr/: Cargo.toml
cafr/src/: cafr_001_001_02.rs  cafr_002_001_02.rs  cafr_003_001_02.rs  cafr_004_001_02.rs  lib.rs
cain/: Cargo.toml
cain/src/: cain_001_001_03.rs  cain_002_001_03.rs  cain_003_001_03.rs  cain_004_001_03.rs  cain_005_001_03.rs  cain_006_001_03.rs  cain_014_001_02.rs  cain_015_001_02.rs  cain_016_001_02.rs  cain_017_001_02.rs  cain_018_001_02.rs  cain_019_001_02.rs  cain_020_001_02.rs  cain_021_001_02.rs  cain_022_001_02.rs  cain_023_001_02.rs  cain_024_001_02.rs  cain_025_001_02.rs  cain_026_001_02.rs  cain_027_001_02.rs  cain_028_001_02.rs  lib.rs
camt/: Cargo.toml
canm/: Cargo.toml
casp/: Cargo.toml
casr/: Cargo.toml
catm/: Cargo.toml
catp/: Cargo.toml
colr/: Cargo.toml
dsig/: Cargo.toml
dsig/src/: dsig.rs  ecdsa.rs  lib.rs  xpath.rs
fxtr/: Cargo.toml
guide/: book.toml
head/: Cargo.toml
nvlp/: Cargo.toml
pacs/: Cargo.toml
pacs/src/: lib.rs  pacs_002_001_12.rs  pacs_003_001_09.rs  pacs_004_001_11.rs  pacs_007_001_11.rs  pacs_008_001_10.rs  pacs_009_001_10.rs  pacs_010_001_05.rs  pacs_028_001_05.rs  pacs_029_001_01.rs
pain/: Cargo.toml
reda/: Cargo.toml
remt/: Cargo.toml
remt/src/: lib.rs  remt_001_001_05.rs  remt_002_001_02.rs
sdk/: Cargo.toml
sdk/examples/: nvlp.xml  pacs.xml
sdk/src/: external_codes.rs  lib.rs  message.rs
sdk/src/crypto/: ecdsa.rs  mod.rs  p256.rs
sdk/src/documents/: acmt.rs  admi.rs  auth.rs  caaa.rs  caad.rs  caam.rs  cafc.rs  cafm.rs  cafr.rs  cain.rs  camt.rs  canm.rs  casp.rs  casr.rs  catm.rs  catp.rs  colr.rs  fxtr.rs  mod.rs  pacs.rs  pain.rs  reda.rs  remt.rs  secl.rs  seev.rs  semt.rs  sese.rs  setr.rs  tsin.rs  tsmt.rs  tsrv.rs
secl/: Cargo.toml
seev/: Cargo.toml
semt/: Cargo.toml
sese/: Cargo.toml
setr/: Cargo.toml
tests/: Cargo.toml
tests/src/: tests.rs
tsin/: Cargo.toml
tsmt/: Cargo.toml
tsmt/src/: lib.rs  tsmt_001_001_03.rs  tsmt_002_001_04.rs  tsmt_003_001_03.rs  tsmt_004_001_02.rs  tsmt_005_001_02.rs  tsmt_006_001_03.rs  tsmt_007_001_02.rs  tsmt_008_001_03.rs  tsmt_009_001_05.rs  tsmt_010_001_03.rs  tsmt_011_001_04.rs  tsmt_012_001_05.rs  tsmt_013_001_03.rs  tsmt_014_001_05.rs  tsmt_015_001_03.rs  tsmt_016_001_03.rs  tsmt_017_001_05.rs  tsmt_018_001_05.rs  tsmt_019_001_05.rs  tsmt_020_001_02.rs  tsmt_021_001_03.rs  tsmt_022_001_02.rs  tsmt_023_001_03.rs  tsmt_024_001_03.rs  tsmt_025_001_03.rs  tsmt_026_001_02.rs  tsmt_027_001_02.rs  tsmt_028_001_03.rs  tsmt_029_001_02.rs  tsmt_030_001_03.rs  tsmt_031_001_03.rs  tsmt_032_001_03.rs  tsmt_033_001_03.rs  tsmt_034_001_03.rs  tsmt_035_001_03.rs  tsmt_036_001_03.rs  tsmt_038_001_03.rs  tsmt_040_001_03.rs  tsmt_041_001_03.rs  (+13 more)
tsrv/: Cargo.toml
(+483 files in other folders)
