[workspace]
members = [
"acmt",
"admi",
"auth",
"caaa",
"caad",
"caam",
"cafc",
"cafm",
"cafr",
"cain",
"camt",
"canm",
"casp",
"casr",
"catm",
"catp",
"colr",
"dsig",
"fxtr",
"nvlp",
"head",
"pacs",
"pain",
"reda",
"remt",
"sdk",
"secl",
"seev",
"semt",
"sese",
"setr",
"tests",
"tsin",
"tsmt",
"tsrv",
]
