[workspace]
members = [
    "sdk",
    "tests",
]
exclude = [
"acmt",
"admi",
"auth",
"caaa",
"caad",
"caam",
"cafc",
"cafm",
"cafr",
"cain",
"camt",
"canm",
"casp",
"casr",
"catm",
"catp",
"colr",
"dsig",
"fxtr",
"nvlp",
"head",
"pacs",
"pain",
"reda",
"remt",
"secl",
"seev",
"semt",
"sese",
"setr",
"tsin",
"tsmt",
"tsrv",
]


# Use local dsig for development
[patch.crates-io]
iso-20022-dsig = { path = "dsig" }
iso-20022-nvlp = { path = "nvlp" }
iso-20022-head = { path = "head" }