[package]
name = "iso-20022-pacs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/emergentfinancial/iso20022"
authors = ["Ryan Tate <ryan.tate@emergent.financial>"]
license = "MIT OR APACHE-2.0"
keywords = ["iso20022", "Universal financial industry message scheme"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
lazy_static = "1.4.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
validator = { version = "0.16.0", features = ["derive"] }
xml-rs = "0.8.4"