[package]
name = "iso-20022-sdk"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/emergentfinancial/iso-20022"
description = "ISO 20022 Universal Financial Industry Message Scheme Rust SDK"
authors = ["Ryan Tate <ryan.tate@emergent.financial>"]
homepage = "https://emergentfinancial.github.io/iso-20022"
documentation = "https://docs.rs/iso-20022-sdk"
readme = "../README.md"
license-file = "../LICENSE.md"
categories = ["finance", "encoding"]
keywords = ["ISO", "20022"]

[features]
default = ["msg", "pacs"]
msg = ["nvlp", "head", "crypto"]
## Cryptographic Signatures
crypto = ["dsig", "signature", "ecdsa"]
ecdsa = ["p256", "elliptic-curve", "rand_core"]
## Business Domains
payments = ["acmt", "auth", "acmt", "admi", "camt", "pacs", "pain", "reda", "remt"]
securities = ["auth", "acmt", "admi", "camt", "colr", "reda", "semt", "sese", "setr", "seev"]
trade = ["auth", "tsin", "tsrv", "tsmt"]
cards = ["caaa", "caam", "catp", "caad", "cafc", "cafm", "cafr", "cain", "canm", "catm", "casp", "casr"]
fx = ["admi", "camt", "fxtr", "reda"]
## Pre-requisites
nvlp = ["iso-20022-nvlp"]
head = ["iso-20022-head"]
dsig = ["iso-20022-dsig"]
## Message Sets
acmt = ["iso-20022-acmt"]
admi = ["iso-20022-admi"]
auth = ["iso-20022-auth"]
caaa = ["iso-20022-caaa"]
caad = ["iso-20022-caad"]
caam = ["iso-20022-caam"]
cafc = ["iso-20022-cafc"]
cafm = ["iso-20022-cafm"]
cafr = ["iso-20022-cafr"]
cain = ["iso-20022-cain"]
camt = ["iso-20022-camt"]
canm = ["iso-20022-canm"]
casp = ["iso-20022-casp"]
casr = ["iso-20022-casr"]
catm = ["iso-20022-catm"]
catp = ["iso-20022-catp"]
colr = ["iso-20022-colr"]
fxtr = ["iso-20022-fxtr"]
pacs = ["iso-20022-pacs"]
pain = ["iso-20022-pain"]
reda = ["iso-20022-reda"]
remt = ["iso-20022-remt"]
secl = ["iso-20022-secl"]
seev = ["iso-20022-seev"]
semt = ["iso-20022-semt"]
sese = ["iso-20022-sese"]
setr = ["iso-20022-setr"]
tsin = ["iso-20022-tsin"]
tsmt = ["iso-20022-tsmt"]
tsrv = ["iso-20022-tsrv"]

[dependencies]
iso-20022-nvlp = { version = "0.1.0", optional = true }
iso-20022-head = { version = "0.1.0", optional = true }
iso-20022-dsig = { version = "0.1.1", optional = true }
iso-20022-acmt = { version = "0.1.0", optional = true }
iso-20022-admi = { version = "0.1.0", optional = true }
iso-20022-auth = { version = "0.1.0", optional = true }
iso-20022-caaa = { version = "0.1.0", optional = true }
iso-20022-caad = { version = "0.1.0", optional = true }
iso-20022-caam = { version = "0.1.0", optional = true }
iso-20022-cafc = { version = "0.1.0", optional = true }
iso-20022-cafm = { version = "0.1.0", optional = true }
iso-20022-cafr = { version = "0.1.0", optional = true }
iso-20022-cain = { version = "0.1.0", optional = true }
iso-20022-camt = { version = "0.1.0", optional = true }
iso-20022-canm = { version = "0.1.0", optional = true }
iso-20022-casp = { version = "0.1.0", optional = true }
iso-20022-casr = { version = "0.1.0", optional = true }
iso-20022-catm = { version = "0.1.0", optional = true }
iso-20022-catp = { version = "0.1.0", optional = true }
iso-20022-colr = { version = "0.1.0", optional = true }
iso-20022-fxtr = { version = "0.1.0", optional = true }
iso-20022-pacs = { version = "0.1.0", optional = true }
iso-20022-pain = { version = "0.1.0", optional = true }
iso-20022-reda = { version = "0.1.0", optional = true }
iso-20022-remt = { version = "0.1.0", optional = true }
iso-20022-secl = { version = "0.1.0", optional = true }
iso-20022-seev = { version = "0.1.0", optional = true }
iso-20022-semt = { version = "0.1.0", optional = true }
iso-20022-sese = { version = "0.1.0", optional = true }
iso-20022-setr = { version = "0.1.0", optional = true }
iso-20022-tsin = { version = "0.1.0", optional = true }
iso-20022-tsmt = { version = "0.1.0", optional = true }
iso-20022-tsrv = { version = "0.1.0", optional = true }
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
lazy_static = "1.4.0"
p256 = { version = "0.13.1", optional = true, features = ["arithmetic", "alloc", "pem", "pkcs8"] }
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }
xml-rs = "0.8.4"
quick-xml = { version = "0.28.1", features = ["serialize"] }
format_xml = "0.3.0"
thiserror = "1.0.40"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
signature = { version = "2.1.0", optional = true }
uuid = { version = "1.3.3", features = ["v4", "serde"]}
elliptic-curve = { version = "0.13.4", optional = true, features = ["sec1", "alloc"] }
hex = { version = "0.4.3", features = ["serde"] }
sha2 = "0.10.6"
base64 = "0.21.0"
rand_core = { version = "0.6.4", optional = true, features = ["getrandom"] }
der = "0.7.6"

