[package]
name = "iso-20022-tsmt"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/emergentfinancial/iso-20022"
description = "ISO 20022 Universal Financial Industry Message Scheme Rust SDK"
authors = ["Ryan Tate <ryan.tate@emergent.financial>"]
homepage = "https://emergentfinancial.github.io/iso-20022"
documentation = "https://docs.rs/iso-20022-sdk"
readme = "../README.md"
license-file = "../LICENSE.md"
categories = ["finance"]
keywords = ["ISO", "20022"]

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
derive_builder = "0.12.0"
lazy_static = "1.4.0"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
validator = { version = "0.16.0", features = ["derive"] }
xml-rs = "0.8.4"